kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production  
  name: shop
  labels:
    app: frontend
spec:
  rules:
    - host: shop.35.246.104.142.nip.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
  tls:
    - hosts:
        - shop.35.246.104.142.nip.io
      secretName: shop-tls
